--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,2 @@
-spring.datasource.url=jdbc:h2:mem:test
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.h2.console.path=/h2
-spring.h2.console.enabled=true
-spring.jpa.show-sql=true
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 server.port=9090
+spring.profiles.active=prod
